--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -12,7 +12,7 @@ from openedx.core.djangolib.markup import HTML
           % if homepage_overlay_html:
             ${homepage_overlay_html}
           % else:
-            <h1>${_(HTML("Free courses from <strong>{university_name}</strong>")).format(university_name="Stanford")}</h1>
+            <h1>${_(HTML("Free courses from <strong>Faga</strong>")).format(university_name="Stanford")}</h1>
             <p>${_("For anyone, anywhere, anytime")}</p>
           % endif
         </div>
