--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -8,7 +8,7 @@ from openedx.core.djangolib.markup import HTML
   <header>
     <div class="outer-wrapper">
       <div class="title">
-        <div class="heading-group">
+        <div style="background-image: ${static.url('images/sunrise.jpg')}" class="heading-group">
           % if homepage_overlay_html:
             ${homepage_overlay_html}
           % else:
